Release 0.3.3 - 20XX/XX/XX

Release 0.3.2 - 2015/01/29
  BUG FIXES
    Fixes DatabaseMetaData#getColumns method. It should add 'time' column to a table schema returned by td-api

Release 0.3.1 - 2014/12/25
  BUG FIXES
    Fixes ResultSet#getTimestamp method. It returns null when a query result is NULL value. should not throw MessageTypeException.
    Supports PreparedStatement for SELECT statements

Release 0.3.0 - 2014/11/25
  IMPROVEMENTS
    Supports PreparedStatement for SELECT statements

Release 0.2.16 - 2014/10/28
  IMPROVEMENTS
    Supports date and timestamp types provided by Presto.

Release 0.2.15 - 2014/10/14
  IMPROVEMENTS
    Improves some validations in DatabaseMetaData#getTables()
      if catalog is null or empty string, it sets the catalog string to the specified database.
      if catalog is not same as the specified database, it returns null.
      skips the validation and doesn't filter table descriptions with schema pattern for now.

Release 0.2.14 - 2014/09/11
  IMPROVEMENTS
    ResultSetMetaData#isSigned supports 'varchar' type for presto engine.

Release 0.2.13 - 2014/09/10
  IMPROVEMENTS
    Upgrades td-client-java 0.5.2
    Improves some validations
      Connection: it throws SQLException if the specified user or password is null.
      Connection: it throws SQLException if the specified database doesn't exist.
      TDClientAPI: it throws SQLException if email or password is incorrect.

Release 0.2.12 - 2014/09/03
  IMPROVEMENTS
    Upgrades td-logger-java 0.2.0
    Upgrades td-client-java 0.5.1
    Improves Proxy settings as URL parameters.

  BUG FIXES
    Makes Connection#getMetaData#getCatalogs return just the selected database.
    Implementes filtering by catalog, schema name, and list of types in Connection#getMetadata#getTables function.

Release 0.2.11 - 2014/06/26
  NEW FEATURES
    Supports varchar type provided by Presto.

Release 0.2.10 - 2014/06/10
  NEW FEATURES
    Supports specifying Proxy settings as URL parameters.
